--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/jee-mvc-jsp
 spring.mvc.view.prefix = /jsp/
 spring.mvc.view.suffix = .jsp
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3307/sakila?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
+spring.datasource.url=jdbc:mysql://localhost:3307/sakila
 spring.datasource.username=java1
 spring.datasource.password=java1
 # Log
